# pysh

./: .gitignore  README.md  pyproject.toml  pysh.py
pysh/: __init__.py  pysh.py  token_transformers.py  util.py
tests/: test_cd.py  test_env.py
