[tool.poetry]
name = "pysh-stub"
packages = [{ include = "pysh" }]
version = "1.1.2"
description = "A bunch of shortcuts and weird magic to simplify scripting in python"
authors = ["Stanislav Zmiev <szmiev2000@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ovsyanka83/pysh"
keywords = ["python", "shell", "bash", "script", "scripting", "pysh"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = "^3.7"
typer = { extras = ["all"], version = "^0.4.0" }
tomlkit = "^0.10.0"
typing-extensions = "^4.2.0"
ideas = "^0.0.37"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.scripts]
pysh = 'pysh.pysh:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
